# IEEESoftware

./: readme.txt
FourWheelsArduino/FourWheelsArduino/: FourWheelsArduino.ino
FourWheelsFollower/FourWheelsFollower/: FourWheelsFollower.ino
PCB/Altium/ROBO_PCB/: PCBSchematic.SchDoc  ROBO_PCB.PrjPcb  ROBO_PCB.PrjPcbStructure
PCB/Altium/ROBO_PCB/__Previews/: PCBSchematic.SchDocPreview
computerVision/d435-testing/: Testing.py  config  findColor.py  shapes.py  takephoto.py
four_motor_drive/: CMakeLists.txt  four_motor_drive.c  four_motor_drive.pio
